--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Display a map on a webpage</title>
+    <title>The earthquake map</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
     <link href="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body>
-    <div id="map"></div>
+    <div id="title">The earthquake map</div>
+    <div id="content">Do you know where the lastest earthquakes happened in/near the US? Click on the markers to explore when these quakes happened and their magnitudes</div>
+    <div id="container"></div>
 </body>
 
 <script src="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.js"></script>
+<script src="js/1wearthquake.js"></script>
 <script src="js/scripts.js"></script>
+
 </html>
