--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 </head>
 
 <body>
-    <div id="title">The earthquake map</div>
-    <div id="content">Do you know where the lastest earthquakes happened in/near the US? Click on the markers to explore when these quakes happened and their magnitudes</div>
     <div id="container"></div>
+    <div id="title">The earthquake map of this week</div>
+    <div id="content">Do you know how many earthquakes happened in/near the US just for the last week? <br> Zoom out and click on the markers to explore when these quakes happened and their magnitudes. <i>(Only earthquakes > M2.5 are displayed)</i></div>
+    <div id="legendA">Red = Quakes stronger than M5.0</div>
+    <div id="legendB">Orange = Quakes between M4.0 and M5.0</div>
+    <div id="legendC">Yellow = Quakes weaker than M4.0</div>
+    <br>
+    <button id="fit">Get back to where we are - NYC</button>
 </body>
 
 <script src="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.js"></script>
